# eigen-neovim

./: README.md  README_1year.md  USAGE.md  pyproject.toml
eigen_neovim/: __init__.py  __main__.py  detector.py  github_client.py  output.py  parser.py  stats.py
eigen_neovim/templates/: readme.md.j2
