[project]
name = "eigen-neovim"
version = "2.0.0"
description = "Data-driven analysis of Neovim Lua configurations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "tree-sitter>=0.23",
    "tree-sitter-lua>=0.2",
    "polars>=1.0",
    "rich>=13.0",
    "click>=8.0",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
plot = [
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.scripts]
eigen-neovim = "eigen_neovim.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
